# app-pdf-to-word

./: app.py  pdf_to_word.py  pyproject.toml  rag_demo.py  requirements.txt
.streamlit/: config.toml
